--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="linktree" id="linktree">
         <h2>My Linktree</h2>
         <ul id="links"></ul>
-        <button id="addLinkButton">Add Link</button>
+        <button id="addLinkButton">Add Links</button>
         <form class="form" id="addLinkForm">
             <div class="input-group">
             <input type="text" id="socialPlatform" placeholder="Social Platform">
