--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="main-container">
     
     <div class="linktree" id="linktree">
-        <h2>My Linktree</h2>
+        <h2>Linkhub</h2>
         <ul id="links"></ul>
         <button id="addLinkButton">Add Links</button>
         <form class="form" id="addLinkForm">
